# slabchat

./: .editorconfig  .gitignore  cog.toml
.circleci/: config.yml
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  main.rs
crates/backend/src/config/: mod.rs
crates/backend/src/server/: mod.rs
crates/backend/src/services/: auth_service.rs  user_service.rs
crates/core/: Cargo.toml
crates/core/src/model/: message.rs  message_feed.rs  mod.rs  user.rs
crates/frontend/: Cargo.toml  package.json  pnpm-lock.yaml  rollup.config.js
crates/frontend/src/: index.html  index.mjs  lib.rs
crates/frontend/src/styles/: index.scss
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md
