[package]
name = "slab-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
toml = "0.5.9"
tracing = "0.1.34"
tracing-attributes = "0.1.21"
tracing-subscriber = "0.3.11"
rust-argon2 = "1.0.0"
nanoid = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
tokio-stream = "0.1.8"
lazy_static = "1.4.0"
config = "0.13.1"
byteorder = "1.4.3"
jsonwebtoken = "8.1.0"
hyper = { version = "0.14.19", features = ["server", "runtime"] }
warp = "0.3.2"
futures = "0.3.21"
mongodb = { version = "2.2.2", features = ["tokio-runtime", "bson-serde_with"] }
thiserror = "1.0.31"
slab-core = { path = "../core" }
